2011-09-02  Arko Saha  <nghq36@motorola.com>

        Controls not reset when media element url changed from a valid url to an invalid url.
        https://bugs.webkit.org/show_bug.cgi?id=64880

        Reviewed by Eric Carlson.

        * media/media-controls-invalid-url-expected.txt: Added.
        * media/media-controls-invalid-url.html: Added.

2011-09-02  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>

        [Qt][WK2] 4 tests are failing, skip them
        https://bugs.webkit.org/show_bug.cgi?id=67485

        * platform/qt-wk2/Skipped:

2011-09-02  Dominic Cooney  <dominicc@chromium.org>

        Unreviewed test fix.

        Sadly window-property-descriptors enumerates functions in the test
        harness. r94362 added a couple of functions, so these results need
        to be updated.

        * fast/dom/Window/window-property-descriptors-expected.txt:
        * platform/mac/fast/dom/Window/window-property-descriptors-expected.txt:
        * platform/qt-wk2/fast/dom/Window/window-property-descriptors-expected.txt:
        * platform/win/fast/dom/Window/window-property-descriptors-expected.txt:

2011-09-02  Renata Hodovan  <reni@webkit.org>

        [Qt] Two tests are passing after r94324. They are unskipped:
        fast/events/document-elementFromPoint.html
        plugins/mouse-events-fixedpos.html

        Unreviewed gardening.

        * platform/qt/Skipped:

2011-09-02  Alexander Pavlov  <apavlov@chromium.org>

        [Chromium] Unreviewed, update test expectations.

        * platform/chromium/test_expectations.txt:

2011-09-02  Yuta Kitamura  <yutak@chromium.org>

        WebSocket: Send Blob as WebSocket binary message
        https://bugs.webkit.org/show_bug.cgi?id=67465

        Reviewed by Kent Tamura.

        Re-lands r94399 with a fix for Leopard builds.

        * http/tests/websocket/tests/hixie76/send-empty-expected.txt: Added.
        * http/tests/websocket/tests/hixie76/send-empty.html: Added.